--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Exercícios/ex.023/tabela006.html"
+    "livePreview.defaultPreviewPath": "/Exercícios/ex.026/mq001/index.html"
 }
